--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ after_success:
   - docker build -t kaganberk/multi-nginx ./nginx
   - docker build -t kaganberk/multi-server ./server
   - docker build -t kaganberk/multi-worker ./worker
+ # log in docker
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  #take those images and push tehm to docker hub
+  - docker push kaganberk/multi-client
+  - docker push kaganberk/multi-nginx
+  - docker push kaganberk/multi-server
+  - docker push kaganberk/multi-worker
